--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "module-alias": "^2.2.0",
     "moment": "^2.24.0",
     "mongoose": "^5.7.5",
-    "typegoose": "^5.6.0"
+    "typegoose": "^5.6.0",
+    "jpeg-js": ">=0.4.0"
   },
   "devDependencies": {
     "@types/node": "^11.13.4",
